src/objects/Asset_Returned__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Assets Returned</relationshipLabel>
        <relationshipName>Assets_Returned</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets Returned</relationshipLabel>
        <relationshipName>Assets_Returned</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Returned__c</fullName>
        <label>Date Returned</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Return_Date__c</fullName>
        <label>Expected Return Date</label>
        <referenceTo>Asset_Issue__c</referenceTo>
        <relationshipLabel>Assets Returned</relationshipLabel>
        <relationshipName>Assets_Returned</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <label>Asset Returned</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Asset Returned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets Returned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Invalid_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity cannot be negative</errorMessage>
    </validationRules>
</CustomObject>